<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MessageActivity">


    <EditText
        android:id="@+id/et_MessageActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_a_message"
        android:gravity="start|top"
        android:autofillHints="@string/Meass"
        android:inputType="textMultiLine" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/but_msg_send"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/primary"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_message_regCon"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>
</LinearLayout>