<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/profile"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_account" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    >
    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="00dp"
        android:text="@string/mobile"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/etMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName" />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    >

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/address"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />


</LinearLayout>
<TextView
    android:id="@+id/tvContacts"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="30dp"
    android:text="@string/registered_contacts"
    android:fontFamily="sans-serif-black"
    android:textSize="20sp" />
/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    >
    <TextView
        android:id="@+id/tvContact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/contact1"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/etContact1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName" />

</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    >
    <TextView
        android:id="@+id/tvContact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/contact2"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp" />
    />
    <EditText
        android:id="@+id/etContact2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName" />

</LinearLayout>
<Button
    android:id="@+id/butSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
  android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:background="#457dca"
    android:text="@string/save"
    android:textColor="#ffffff"
    android:fontFamily="sans-serif-black"

    />

</LinearLayout>