<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instructions">

    <TextView
        android:id="@+id/tv_ins_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_system_for_women_security"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-black"/>
    <TextView
        android:id="@+id/tv_ins_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ins_des"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_below="@id/tv_ins_head"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif"/>
    <TextView
        android:id="@+id/tv_ins1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ins1"
        android:layout_below="@id/tv_ins_des"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif"/>
</RelativeLayout>