<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Volunteer"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vol"
        android:id="@+id/tvVolunteer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="monospace"
        android:textColor="@color/tool"
        android:textStyle="bold"
        android:textSize="30sp"
        ></TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="135dp"
        android:layout_height="130dp"
        android:layout_below="@id/tvVolunteer"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="1.2dp">

        <TextView
            android:id="@+id/tvRaise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/raise_complaint"
            android:textColor="@color/primary"
            android:textSize="21sp"></TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="135dp"
        android:layout_height="130dp"
        android:layout_toEndOf="@id/cardView"
        android:layout_below="@id/tvVolunteer"
        android:layout_alignTop="@id/cardView"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="1.2dp"
        >

        <TextView
            android:id="@+id/tvAmbulance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/ambulance"
            android:textColor="@color/primary"
            android:textSize="21sp"></TextView>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/help_img"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="224dp"
        android:contentDescription="@string/qhelp"
        android:src="@drawable/help"
        android:layout_centerInParent="true"></ImageView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cdExit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardCornerRadius="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardElevation="1dp"
        android:layout_below="@id/help_img"
        app:cardMaxElevation="1.2dp"
        >

        <TextView
            android:id="@+id/tvExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"
            android:text="@string/exit"
            android:textColor="@color/dark"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="455dp"></TextView>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_in_volunteer"
        android:background="@drawable/border"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cdExit"
        android:layout_marginTop="25dp"
        />


</RelativeLayout>