<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Addcontacts">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/you_can_add_upto_10_contacts"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:text="@string/pick_a_contact_from_contact_list"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:textColor="@color/white"
            android:background="@color/accent"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_margin="30dp"
            android:id="@+id/displayTable"
            android:shrinkColumns="*"/>
        <Button
            android:id="@+id/butAddSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>